# rsfbclient

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  docker.sh  fbclient.lib
.cargo/: config
.github/: FUNDING.yml
.github/ci-scripts/: create_sysdba_user_windows.ps1  download_firebird_windows.ps1
.github/workflows/: security_audit.yml  testing_changes.yml
benches/: select.rs
examples/: createdb.rs  embedded_select.rs  events.rs  insert.rs  isolation_levels.rs  namedcolumns_select.rs  pool.rs  reconnection.rs  select.rs  services.rs  string_conn.rs  sys_infos.rs  transaction.rs  type_mapping.rs
r2d2_firebird/: Cargo.toml
r2d2_firebird/examples/: pool.rs
r2d2_firebird/src/: lib.rs
rsfbclient-core/: Cargo.toml
rsfbclient-core/src/: charset.rs  column.rs  connection.rs  date_time.rs  error.rs  ibase.rs  impl_helper.rs  lib.rs  param.rs  params.rs  row.rs  transaction.rs
rsfbclient-derive/: Cargo.toml
rsfbclient-derive/src/: lib.rs
rsfbclient-diesel/: Cargo.toml  README.md
rsfbclient-diesel/examples/employee/: Cargo.toml  README.md
rsfbclient-diesel/examples/employee/src/: main.rs  schema.rs
rsfbclient-diesel/examples/employee_pool/: .gitignore  Cargo.toml  README.md
rsfbclient-diesel/examples/employee_pool/src/: main.rs  pool.rs  schema.rs
rsfbclient-diesel/src/: backend.rs  connection.rs  lib.rs  query_builder.rs  transaction.rs  types.rs  value.rs
rsfbclient-diesel/src/fb/: backend.rs  connection.rs  mod.rs  query_builder.rs  transaction.rs  types.rs  value.rs
rsfbclient-diesel/src/tests/: connection.rs  crud.rs  mod.rs  query.rs  schema.rs  types.rs
rsfbclient-native/: Cargo.toml  build.rs
rsfbclient-native/src/: connection.rs  ibase.rs  lib.rs  params.rs  row.rs  services.rs  status.rs  varchar.rs  xsqlda.rs
rsfbclient-rust/: Cargo.toml
rsfbclient-rust/fuzz/: Cargo.toml
rsfbclient-rust/fuzz/fuzz_targets/: parse_accept.rs  parse_cont_auth.rs  parse_response.rs  parse_xsqlda.rs
rsfbclient-rust/src/: arc4.rs  blr.rs  client.rs  consts.rs  lib.rs  srp.rs  util.rs  wire.rs  xsqlda.rs
src/: connection.rs  date_time.rs  error.rs  events.rs  ibase.rs  lib.rs  params.rs  query.rs  row.rs  services.rs  statement.rs  status.rs  transaction.rs  utils.rs  xsqlda.rs
src/connection/: builder.rs  builder_native.rs  builder_pure_rust.rs  conn_string.rs  mod.rs  pool.rs  simple.rs  stmt_cache.rs
src/connection/builders/: builder_native.rs  builder_pure_rust.rs
src/ibase/: blr.rs  common.rs  consts.rs  dynamic.rs  functions.rs  mod.rs  srp.rs  wire.rs  xsqlda.rs
src/tests/: charset.rs  connection.rs  database.rs  embedded_tests.sql  mod.rs  params.rs  row.rs  services.rs  transaction.rs
src/transaction/: builder.rs  mod.rs  simple.rs
tests/: use_c_api.c
