[package]
name = "rsfbclient"
description = "Binds to official firebird client lib"
version = "0.5.1"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>", "Jairo H Wiethan <jairinhowiethan@gmail.com>"]
edition = "2018"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "fbclient", "database", "ffi"]
categories = ["database"]
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4", optional = true }
lru-cache = "0.1.2"
r2d2 = { version = "0.8.9", optional = true }
rsfbclient-core = { version = "0.5.1", path = "rsfbclient-core" }
rsfbclient-native = { version = "0.5.1", path = "rsfbclient-native", optional = true }
rsfbclient-rust = { version = "0.1.0", path = "rsfbclient-rust", optional = true }

[features]
default = ["linking", "date_time", "pool"]
date_time = ["rsfbclient-core/date_time", "chrono"]
dynamic_loading = ["rsfbclient-native/dynamic_loading"]
linking = ["rsfbclient-native/linking"]
embedded_tests = []
pool = ["r2d2"]
pure_rust = ["rsfbclient-rust"]

[workspace]
members = ["rsfbclient-core", "rsfbclient-native", "rsfbclient-rust"]