[package]
name = "rsfbclient"
description = "Binds to official firebird client lib"
version = "0.18.0"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>", "Jairo H Wiethan <jairinhowiethan@gmail.com>"]
edition = "2021"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "fbclient", "database", "ffi"]
categories = ["database"]
license = "MIT"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.19", features = ["clock", "std"], default-features = false }
lru-cache = "0.1.2"
rsfbclient-core = { version = "0.18.0", path = "rsfbclient-core" }
rsfbclient-native = { version = "0.18.0", path = "rsfbclient-native", optional = true }
rsfbclient-rust = { version = "0.18.0", path = "rsfbclient-rust", optional = true }
rsfbclient-derive = { version = "0.18.0", path = "rsfbclient-derive" }
url = "2.2.1"
percent-encoding = "2.1.0"

[dev-dependencies]
rand = "0.8.3"
r2d2 = "0.8.9"

[features]
default = ["linking"]
dynamic_loading = ["rsfbclient-native/dynamic_loading", "native_client"]
linking = ["rsfbclient-native/linking", "native_client"]
embedded_tests = []
pure_rust = ["rsfbclient-rust"]
native_client = []

[workspace]
members = ["rsfbclient-core", "rsfbclient-native", "rsfbclient-rust", "rsfbclient-derive", "r2d2_firebird"]

[package.metadata.docs.rs]
all-features = true
