[package]
name = "r2d2_firebird"
version = "0.16.0"
description = "Firebird support for the r2d2 connection pool"
authors = [
    "silvioprog <silvioprog@gmail.com>",
    "Jairo H Wiethan <jairinhowiethan@gmail.com>",
]
edition = "2018"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "sql", "pool", "database"]
categories = ["database"]
license = "MIT"

[dependencies]
rsfbclient = { version = "0.16", path = "../", default-features = false }
rsfbclient-core = { version = "0.16", path = "../rsfbclient-core" }
r2d2 = "0.8.9"

[dev-dependencies]
rsfbclient = { version = "0.16", path = "../", features = ["pure_rust"], default-features = false }
