[package]
name = "r2d2_firebird"
version = "0.25.2"
description = "Firebird support for the r2d2 connection pool"
authors = [
    "silvioprog <silvioprog@gmail.com>",
    "Jairo H Wiethan <jairinhowiethan@gmail.com>",
]
edition = "2021"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "sql", "pool", "database"]
categories = ["database"]
license = "MIT"

[dependencies]
rsfbclient = { version = "0.25.2", path = "../", default-features = false }
rsfbclient-core = { version = "0.25.2", path = "../rsfbclient-core" }
r2d2 = "0.8.9"

diesel = { version = "2.0.0", optional = true }
rsfbclient-diesel = { version = "0.25.1", path = "../rsfbclient-diesel", optional = true }

[features]
default=[]
diesel_pool=["diesel", "rsfbclient-diesel"]

[dev-dependencies]
rsfbclient = { version = "0.25.2", path = "../", features = ["pure_rust"], default-features = false }
