[package]
name = "rsfbclient-core"
version = "0.13.0"
description = "Core of firebird client lib"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>", "Jairo H Wiethan <jairinhowiethan@gmail.com>"]
edition = "2018"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "fbclient", "database"]
categories = ["database"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.13", optional = true }
num_enum = "0.5.1"
thiserror = "1.0.20"
encoding = "0.2"
regex = "1.4"

[features]
date_time = ["chrono"]

[package.metadata.docs.rs]
all-features = true
