[package]
name = "rsfbclient-diesel"
version = "0.23.1"
description = "The Diesel implementation for Firebird"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>"]
edition = "2021"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "fbclient", "database", "ffi"]
categories = ["database"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "=2.0.0", default-features = false, features = ["chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"]}
rsfbclient = { version = "0.23.1", path = "../", default-features = false }
byteorder = "1.4.3"
bytes = "1.0.1"
chrono = { version = "0.4.22", features = ["clock", "std"], default-features = false }

[features]
default = ["linking"]
dynamic_loading = ["rsfbclient/dynamic_loading"]
linking = ["rsfbclient/linking"]
pure_rust = ["rsfbclient/pure_rust"]

[package.metadata.docs.rs]
all-features = true
