[package]
name = "rsfbclient-native"
version = "0.5.1"
description = "Native(using fbclient) implementation of firebird client lib"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>", "Jairo H Wiethan <jairinhowiethan@gmail.com>"]
edition = "2018"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "fbclient", "database", "ffi"]
categories = ["database"]
license = "MIT"

[dependencies]
rsfbclient-core = { version = "0.5.1", path = "../rsfbclient-core" }
libloading = { version = "0.6", optional = true }

[features]
linking = []
dynamic_loading = ["libloading"]