[package]
name = "rsfbclient-native"
version = "0.12.0"
description = "Native(using fbclient) implementation of firebird client lib"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>", "Jairo H Wiethan <jairinhowiethan@gmail.com>"]
edition = "2018"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "fbclient", "database", "ffi"]
categories = ["database"]
license = "MIT"

[dependencies]
rsfbclient-core = { version = "0.12.0", path = "../rsfbclient-core" }
libloading = { version = "0.6", optional = true }

[features]
linking = []
dynamic_loading = ["libloading"]
date_time = ["rsfbclient-core/date_time"]

[build-dependencies]
glob = "0.3.0"
