[package]
name = "rsfbclient-rust"
version = "0.13.0"
description = "A pure Rust implementation of firebird client lib"
authors = ["Luis Fernando Batels <luisfbatels@gmail.com>", "Jairo H Wiethan <jairinhowiethan@gmail.com>"]
edition = "2018"
repository = "https://github.com/fernandobatels/rsfbclient"
keywords = ["firebird", "fbclient", "database"]
categories = ["database"]
license = "MIT"

[dependencies]
bytes = "1.0.0"
digest = "0.9.0"
generic-array = "0.14.4"
hex = "0.4.2"
lazy_static = "1.4.0"
num-bigint = "0.3.1"
num_enum = "0.5.1"
pwhash = "1.0.0"
rand = "0.8.0"
rsfbclient-core = { version = "0.13.0", path = "../rsfbclient-core" }
sha-1 = "0.9.2"
sha2 = "0.9.2"

[features]
fuzz_testing = []
date_time = ["rsfbclient-core/date_time"]
