[package]
name = "employee-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "2.0.0"
rsfbclient-diesel = "0.25.0"
r2d2 = "0.8.10"
rsfbclient = "0.26.0"
r2d2_firebird = {version="0.26.0", path="../../../r2d2_firebird", features=["diesel_pool"]}
rsfbclient-core = "0.26.0"

[workspace]
